src/main/resources/view/HelpWindow.css
#copyButton, #helpMessage {
    -fx-text-fill: white;
}

#copyButton {
    -fx-background-color: dimgray;
}

#copyButton:hover {
    -fx-background-color: gray;
}

#copyButton:armed {
    -fx-background-color: darkgray;
}

#helpMessageContainer {
    -fx-background-color: derive(#1d1d1d, 20%);
}

.help-title {
    -fx-font-size: 22px;
    -fx-font-weight: bold;
}

.help-section {
    -fx-font-size: 16px;
    -fx-font-weight: bold;
}

.help-subtitle {
    -fx-font-size: 13px;
    -fx-font-weight: bold;
}

.help-command {
    -fx-font-family: "Consolas";
    -fx-background-color: #f4f4f4;
}

